スマホ対応
＜課題＞
・csvエンコード（pythonでjsonリスト化）
・ネットワークネームのサイズ

--- a/client/css/home_style.css
+++ b/client/css/home_style.css
@@ -1,6 +1,6 @@
 body{
   /* background-color:rgba(95, 49, 209, 0.1); */
-  font-family: "メイリオ"
+  font-family:'メイリオ',
 }
 .page_top{
   text-decoration: underline;
@@ -10,7 +10,6 @@ body{
 .p_4rem{
   margin: 4rem;
 }
-
 
 .button_flex{
   display: flex;
@@ -41,41 +40,48 @@ body{
   background-color: rgb(255, 255, 255);
 }
 
-.data_check_form{
-  overflow:auto;
-  /* top:0; */
-  display: flex;
-
-  width:95vw;
-  height:40vh;
-  margin: 0 2.8vw 0 2.2vw;
-  box-shadow: rgba(14, 30, 37, 0.12) 0rem 0.25rem 0.5rem 0rem, rgba(14, 30, 37, 0.32) 0rem 0.25rem 2rem 0rem;
-}
-
 .modebar-btn {
     font-size: 4rem !important;
 }
-
+.js-plotly-plot .plotly [data-title]::after{
+  display: none !important;
+}
+.js-plotly-plot .plotly [data-title]::before, .js-plotly-plot .plotly [data-title]::after{
+  display: none !important;
+}
+.data_check_form{
+  overflow:auto;
+  width:97vw;
+  height:40vh;
+  margin: 0 2vw 0 1vw;
+  box-shadow: rgba(14, 30, 37, 0.12) 0rem 0.25rem 0.5rem 0rem, rgba(14, 30, 37, 0.32) 0rem 0.25rem 2rem 0rem;
+}
 .data_check_table{
-  background-color: #f8ffcd;
-  width:100%;
-  height:100%;
   font-size: 2rem;
   text-align: center;
-  /* border-collapse: collapse; */
-  border-spacing: 0;
+  vertical-align:top
 }
-.data_check_table tr {
- padding: 1rem;
- border: solid 1px #778ca3;
+.data_check_table th {
+  font-size: 2rem;
+  position: sticky;
+  top: 0;
+  padding: 1rem;
+  word-break:break-all;
+  background: #f8ffcd;
+  border: 0.1rem solid #000000;
+  vertical-align:top
 }
 .data_check_table td {
- padding: 1rem;
- border: solid 1px #778ca3;
+  font-size: 2rem;
+  padding: 1rem;
+  border: solid 1px #778ca3;
+  word-break:break-all;
+  /* white-space: nowrap; */
 }
 
 .chk_box_div {
-	margin:0rem 0rem 0rem 0rem;
+	margin:0rem 7rem 1rem 7rem;
+    /* テーブルの幅 */
   height:3rem;
   width:3rem
 }
@@ -121,14 +127,28 @@ body{
   font-size: 3rem;
 }
 
-.network_name{
-  font-size: 2rem;
+.received_data{
+  width: 97vw;
+  height: 97vw;
+  border: solid 1px #778ca3;
+  margin: 0 2vw 0 1vw;
+  box-shadow: rgba(14, 30, 37, 0.12) 0rem 0.25rem 0.5rem 0rem, rgba(14, 30, 37, 0.32) 0rem 0.25rem 2rem 0rem;
 }
 
-.received_data{
-  width: 100vw;
-  height: 100vw;
-  border: solid 1px #778ca3;
+.network_name_div {
+    padding: 1rem 1em;
+    margin: 2em 0;
+    font-weight: bold;
+    color: #6091d3;/*文字色*/
+    background: #FFF;
+    border: solid 3px #6091d3;/*線*/
+    border-radius: 10px;/*角の丸み*/
+}
+.network_name_div p {
+  font-size: 2rem;
+  margin: 0;
+  padding: 0;
+  text-align: center;
 }
 
 .loader-wrap {
@@ -136,7 +156,7 @@ body{
 	display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    width: 100vw;
     height: 100%;
     background: #000000;
     opacity: 20%;
