--- a/calc_page/css/home_style.css
+++ b/calc_page/css/home_style.css
@@ -1,11 +1,10 @@
 html{
-  width: 100%;
-  height: 100%;
+  background-color: rgb(255, 255, 255);
 }
 
 body{
-  /* background-color:rgba(95, 49, 209, 0.1); */
--webkit-text-size-adjust: 100%;
+  background-color:rgb(255, 255, 255);
+  -webkit-text-size-adjust: 100%;
   font-family:'Arial';
   width: 98vw;
   height: 100%;
