--- a/calc_page/css/main_style.css
+++ b/calc_page/css/main_style.css
@@ -1,23 +1,34 @@
+:root{
+  --tg_switch_scale: 0.25rem;
+  --menu_font_size: 2.5rem;
+}
+
+*{
+margin:0;
+padding:0;
+}
+
 html{
-  background-color: rgb(255, 255, 255);
 }
 
 body{
-  background-color:rgb(255, 255, 255);
   -webkit-text-size-adjust: 100%;
   font-family:'Arial';
   width: 98vw;
-  height: 100%;
+  height: 100vh;
   margin: 1vw;
-  position: relative;
-  top: 0;
+  background-color: #FEFFF5;
+  overflow-x: hidden;
 }
+
+a,button{transition: background .3s ease-in-out;outline: none!important;} /* Prevent blue selection glow on Chrome and Safari */
+
 .page_top{
   text-decoration: underline;
   font-size: 4rem;
+  padding: 2rem 0;
   text-align: center;
 }
-
 
 .add_btn {
   display: none;
@@ -26,17 +37,19 @@ body{
   display: none;
 }
 .btn_label2 {
-  width: 20%;
-  height: 3.5rem;
-  text-align: center;
-  background-color: #ffa300;
-  font-size: 3rem;
-  color: #FFF;
-  text-decoration: none;
-  font-weight: bold;
-  border-radius: 4px;
-  border-bottom: 4px solid #d37800;
-  margin: 0 0 0 5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20%;
+    height: 3.5rem;
+    background-color: #ffa300;
+    font-size: var(--menu_font_size);
+    color: #FFF;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 4px;
+    border-bottom: 4px solid #d37800;
+    margin: 0 0 0 5%;
 }
 .btn_label2:active {
     transform: translateY(4px);
@@ -60,10 +73,8 @@ body{
   display: none;
 }
 .btn_label1 {
-  width:fit-content
-  text-align: left;
   background-color: #ffa300;
-  font-size: 3rem;
+  font-size: var(--menu_font_size);
   color: #FFF;
   font-weight: bold;
   padding: 10px 24px;
@@ -88,8 +99,14 @@ body{
 }
 
 #file_select_form{
-  width:fit-content;
-  height:fit-content;
+  display: flex;
+  align-items: center;
+  height: 8rem;
+}
+#update_value_label {
+  display: flex;
+  justify-content: space-evenly;
+  margin: 2rem 0 0 0;
 }
 
 .modebar-btn {
@@ -101,45 +118,38 @@ body{
 .js-plotly-plot .plotly [data-title]::before, .js-plotly-plot .plotly [data-title]::after{
   display: none !important;
 }
+
 .data_check_form{
   overflow:auto;
-  border: solid 0.1rem;
+  border: solid 0.2rem;
 }
 .data_check_table{
   font-size: 2.5rem;
-  text-align: center;
-  vertical-align:top
+  table-layout:auto;
+}
+.data_check_table_body{
 }
 .data_check_table th {
-  position: sticky;
-  top: 0;
   padding: 1rem;
-  word-break:break-all;
   background: #f8ffcd;
   border: solid 0.1rem #778ca3;
-  vertical-align:top;
-  /* box-shadow: -0.2rem -0.2rem 0.4rem inset; */
+  vertical-align: top;
 }
 .data_check_table td {
+  text-align: center;
   padding: 1rem;
   border: solid 0.1rem #778ca3;
-  word-break:break-all;
-  /* white-space: nowrap; */
+  background: rgb(255, 255, 255);
 }
 
 .chk_box_div {
-	margin:0rem 7rem 1rem 7rem;
-    /* テーブルの幅 */
-  height:3rem;
-  width:3rem
+    margin: 0 6rem;
 }
 /* ラベルのスタイル*/
 .chk_box_div label {
+  /* cursor: pointer; */
 	font-size:4rem;
   line-height: 3rem;
-	display: flexinline-block;
-	cursor: pointer;
-	/* position: Left; */
 }
 /* ボックスのスタイル */
 .chk_box_div label:before {
@@ -169,13 +179,18 @@ body{
   flex-direction: row;
 }
 
+.col_div{
+  display: flex;
+  flex-direction: column;
+}
+
 .value_input_div{
   display: flex;
   flex-direction: column;
   padding: 0rem 4rem 0rem 0rem;
 }
 .value_input_label{
-  font-size: 2.5rem;
+  font-size: var(--menu_font_size);
   padding: 0 0 1rem 0;
 }
 .value_input {
@@ -193,6 +208,69 @@ body{
 .value_inputt:focus {
     outline: 0;
     box-shadow: 0 0 0 2px rgb(33, 150, 243) inset;
+}
+
+.tg_switch {
+  border: calc(var(--tg_switch_scale)*1) solid #0c0c0d4d;
+  color: #737373;
+  display: inline-block;
+  margin: 0 0;
+}
+.tg_switch {
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: #0c0c0d1a;
+  border-radius: calc(var(--tg_switch_scale)*8);
+  height: calc(var(--tg_switch_scale)*16);
+  width: calc(var(--tg_switch_scale)*32);
+}
+.tg_switch:hover {
+  background-color: #0c0c0d33;
+  border-color: #0c0c0d7f;
+}
+.tg_switch:active {
+  background-color: #0c0c0d4d;
+}
+.tg_switch:focus {
+  box-shadow: 0 0 0 calc(var(--tg_switch_scale)*1) #0a84ff inset, 0 0 0 calc(var(--tg_switch_scale)*1) #0a84ff, 0 0 0 calc(var(--tg_switch_scale)*4) #0a84ff4d;
+}
+.tg_switch:checked {
+  background-color: #0060df;
+  border-color: #0060df;
+}
+.tg_switch::before {
+  background-color: currentColor;
+  border-radius: calc(var(--tg_switch_scale)*6);
+  content: "";
+  display: inline-block;
+  height: calc(var(--tg_switch_scale)*12);
+  margin-left: calc(var(--tg_switch_scale)*1);
+  margin-top: calc(var(--tg_switch_scale)*1);
+  transition: margin-left .2s cubic-bezier(.07, .95, 0, 1);
+  width: calc(var(--tg_switch_scale)*12);
+}
+.tg_switch:checked::before {
+  background-color: #ffffff;
+  margin-left: calc(var(--tg_switch_scale)*17);
+}
+.tg_switch.text {
+  position: relative;
+}
+.tg_switch.text::after {
+  content: attr(data-text-off);
+  font-size: calc(var(--tg_switch_scale)*8);
+  position: absolute;
+  right: calc(var(--tg_switch_scale)*2);
+  top: calc(var(--tg_switch_scale)*2);
+}
+.tg_switch.text:checked::after {
+  color: #ffffff;
+  content: attr(data-text-on);
+  left: calc(var(--tg_switch_scale)*2);
+  right: auto;
+}
+.tg_switch_label{
+  font-size: calc(var(--tg_switch_scale)*10);
 }
 
 .remove_word_div{
@@ -239,13 +317,12 @@ body{
 
 .network_name_div {
     padding: 1rem 1rem;
-    margin: 2rem 0;
+    margin: 2rem 0 10rem 0;
     font-weight: bold;
-    color: #000000;/*文字色*/
+    color: #000000;
     background: #FFF;
-    border: solid 0.1rem #000000;/*線*/
-    border-radius: 1rem;/*角の丸み*/
-    font-weight:bold;
+    border: solid 0.1rem #000000;
+    border-radius: 1rem;
 }
 .network_name{
   font-size: 2rem;
