--- a/calc_page/main_style.css
+++ b/calc_page/main_style.css
@@ -24,6 +24,16 @@ padding:0;
 font-family:"Oleo_Reg", "Klee_Reg";
 }
 
+.page_link{
+  font-size: 2.5rem;
+  margin: 0 3rem 0 0;
+}
+
+#row_sec1{
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
 html{
 }
 
