--- a/style.css
+++ b/style.css
@@ -116,6 +116,17 @@ a:hover{text-decoration: none; cursor:pointer;}
 	right:100%;
 	left:auto}
 }
+/* = Bric adjustment margins
+-------------------------------------------------------------- */
+
+.mg-sm{
+	margin-top:10px;
+	margin-bottom:5px;
+}
+.mg-md{
+	margin-top:10px;
+	margin-bottom:20px;
+}
 
 /* = Buttons
 -------------------------------------------------------------- */
@@ -141,6 +152,11 @@ button{
 	font-size: 28px;
 }
 
+/* = Icons
+-------------------------------------------------------------- */
+.icon-md{
+	font-size:30px!important;
+}
 
 
 
@@ -206,7 +222,7 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 	max-width:1140px;
 }
 .button{
-	font-family:"Oleo Script";
+	font-family:"Pacifico";
 }
 .button:hover{
 	box-shadow:0px 2px 6px #000000;
@@ -214,6 +230,19 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 .link-style{
 	font-family:"Oleo Script";
 	font-size:40px;
+}
+.h3-style{
+	font-size:25px;
+}
+.p-style{
+	width:100%;
+}
+.team-card{
+	min-height:350px;
+}
+.card-body-style{
+	width:100%;
+	height:351px;
 }
 
 /* = Colour
@@ -333,7 +362,7 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 
 @media (max-width: 575px){
 	.link-style{
-		font-size:18px;
+		font-size:15px;
 		font-family:(null);
 	}
 	.button{
