--- a/calc_page/main_style.css
+++ b/calc_page/main_style.css
@@ -1,23 +1,28 @@
 @import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
-@import url('https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Oleo+Script&display=swap&subset=latin,latin-ext');
+@import url('https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+Antique&display=swap');
 
 :root{
   --tg_switch_scale: 0.26rem;
-  --menu_font_size: 2.5rem;
+  --menu_font_size: 3rem;
   --msg_font_size: 4rem;
+  --data_font_size: 2.5rem;
   --theme_color1: #363F4B;
+  --theme_color2: #9a9a9a;
+
 }
 
 *{
   margin:0;
   padding:0;
-  font-family: 'Helvetica', 'sans-serif';
+  font-family: 'Helvetica', 'Zen Kaku Gothic Antique', 'sans-serif';
+  font-weight: normal;
 }
 
 .page_link{
-  font-size: 2.5rem;
+  font-size: var(--menu_font_size);
   margin: 0 3rem 0 0;
+  font-family: 'Oleo Script';
 }
 
 #row_sec1{
@@ -30,8 +35,8 @@ html{
 
 body{
   -webkit-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
   width: 98vw;
-  height: 100vh;
   margin: 1vw;
   background-color: #FEFFF5;
   overflow-x: hidden;
@@ -42,11 +47,12 @@ body{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100%;
+  z-index: 999;
   position: fixed;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
   background-color: #fff;
   opacity: 0.8;
 }
@@ -66,11 +72,12 @@ body{
 
 a,button{transition: background .3s ease-in-out;outline: none!important;} /* Prevent blue selection glow on Chrome and Safari */
 
-.page_top {
-  font-size: 4rem;
+#page_top {
+  font-size: 5rem;
   padding: 2rem 0;
   text-align: center;
-  font-family:'Oleo Script';
+  color: var(--theme_color2);
+  font-family: 'Oleo Script';
 }
 
 .add_btn {
@@ -78,11 +85,6 @@ a,button{transition: background .3s ease-in-out;outline: none!important;} /* Pre
 }
 .remove_btn {
   display: none;
-}
-
-.form_elem_name{
-  font-size: 2.5rem;
-  margin: 1rem 0;
 }
 
 .button_flex{
@@ -104,7 +106,7 @@ a,button{transition: background .3s ease-in-out;outline: none!important;} /* Pre
     padding: 1rem 0;
     border-radius: 0.25rem;
     text-align: center;
-    margin: 0.5rem 0;
+    margin: 0.5rem 0 1rem 0;
 }
 .btn_label1:active {
     transform: translateY(4px);
@@ -132,6 +134,8 @@ a,button{transition: background .3s ease-in-out;outline: none!important;} /* Pre
 #file_select_label {
     margin: 0;
     width: 30vw;
+    font-family: 'Oleo Script';
+    font-weight: normal;
 }
 
 #file_select_form {
@@ -142,6 +146,8 @@ a,button{transition: background .3s ease-in-out;outline: none!important;} /* Pre
 #update_value_label {
     display: flex;
     justify-content: space-evenly;
+    font-family: 'Oleo Script';
+    font-weight: normal;
 }
 
 .modebar-btn {
@@ -160,19 +166,20 @@ a,button{transition: background .3s ease-in-out;outline: none!important;} /* Pre
     border-radius: 0.5rem;
 }
 .data_check_table{
-  font-size: 2.5rem;
+  font-size: var(--data_font_size);
   table-layout:auto;
 }
 .data_check_table_body{
 }
 .data_check_table th {
-  padding: 1rem;
-  background: var(--theme_color1);
-  border: solid 0.1rem #778ca3;
-  vertical-align: top;
-  position: sticky;
-  top: 0;
-  color: white;
+    padding: 1rem;
+    background: var(--theme_color1);
+    border: solid 0.1rem #778ca3;
+    vertical-align: top;
+    position: sticky;
+    top: 0;
+    color: white;
+    font-weight: normal;
 }
 .data_check_table td {
   text-align: center;
@@ -224,14 +231,19 @@ a,button{transition: background .3s ease-in-out;outline: none!important;} /* Pre
   flex-direction: column;
 }
 
+.value_form{
+  padding: 0 1vw;
+}
+
 .value_input_div{
   display: flex;
   flex-direction: column;
   padding: 0rem 4rem 0rem 0rem;
 }
-.value_input_label{
-  font-size: var(--menu_font_size);
-  padding: 0 0 1rem 0;
+.value_input_label {
+    font-size: var(--menu_font_size);
+    margin: 1rem 0 0 0;
+    font-family: 'Oleo Script';
 }
 .value_input, .remove_word {
     font-size: 3rem;
@@ -246,6 +258,10 @@ a,button{transition: background .3s ease-in-out;outline: none!important;} /* Pre
 .value_input:focus ,.remove_word:focus {
     outline: 0;
     box-shadow: 0 0 0 2px rgb(33, 150, 243) inset;
+}
+
+#remove_word_label{
+
 }
 
 .tg_switch {
@@ -339,7 +355,7 @@ a,button{transition: background .3s ease-in-out;outline: none!important;} /* Pre
     border-radius: 0.5rem;
 }
 .network_name{
-  font-size: var(--menu_font_size);
+  font-size: var(--data_font_size);
   margin: 0;
   padding: 0;
   text-align: center;
