--- a/style.css
+++ b/style.css
@@ -53,6 +53,15 @@ a:hover{text-decoration: none; cursor:pointer;}
 	padding: 0;
 }
 
+.youtube_container {
+  width: 100%;
+  aspect-ratio: 16 / 9;
+}
+.youtube_container iframe {
+  width: 100%;
+  height: 100%;
+}
+
 #bloc-2 {
     padding: 2rem 20px;
 }
