optimization for publish

--- a/front_end/style/current_page.css
+++ b/front_end/style/current_page.css
@@ -1,27 +1,16 @@
-@import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+/* @import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css); */
+/* @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+Antique&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+Antique&display=swap'); */
 
 :root{
   --basic_size: 1rem;
-  --shadow_1: 0
-  calc(var(--basic_size)*0.05) calc(var(--basic_size)*0.15) gray;
-  --shadow_2: 0
-  calc(var(--basic_size)*0.05) calc(var(--basic_size)*0.15) black;
-  --color_1: gray;
-  --color_2:#363F4B;
-  --color_3:
-  rgb(255, 255, 255);
-
-  --color_5:#FEFFF5;
   --tg_switch_scale:
   calc(var(--basic_size)*0.1);
   --menu_font_size: 3rem;
   --msg_font_size: 4rem;
   --data_font_size: 2.5rem;
-  --font_1:
-  'Oleo Script', cursive;
+  --font_1:'Oleo Script', cursive;
 }
 
 /* for mobile device */
@@ -73,17 +62,10 @@
 }
 
 *{
-  font-family: 'Open Sans','Zen Kaku Gothic Antique', sans-serif;
-  font-weight: normal;
 }
 
 .link{
-  font-family: var(--font_1);
   font-size: var(--basic_size);
-  color: blue;
-  text-decoration: underline;
-  /* padding: calc(var(--basic_size)*1.5); */
-  text-align: center;
 }
 
 #row_sec1{
@@ -92,25 +74,11 @@
 }
 
 h1{
-  font-size: calc(var(--basic_size)*1.5);
-  color: var(--color_1);
-  font-family: var(--font_1);
-  padding-top: calc(var(--basic_size)*2);
-  text-align: center;
-  padding-bottom: var(--basic_size);
-}
-
-body{
-  background-color: var(--color_5);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  min-height: 100vh;
-}
-
-main{
-  width: 100%;
+  /* color: var(--color_1); */
+  /* font-family: var(--font_1); */
+  /* padding-top: calc(var(--basic_size)*2); */
+  /* text-align: center; */
+  /* padding-bottom: var(--basic_size); */
 }
 
 header{
@@ -214,6 +182,16 @@ a,button{transition: background .3s ease-in-out;outline: none!important;} /* Pre
 .modebar-btn {
     font-size: calc(var(--basic_size)*1.6) !important;
 }
+#modebar-8f2793 .modebar-btn:hover .icon path {
+    fill: rgb(0, 0, 0) !important;
+}
+#modebar-8f2793 .modebar-btn.active .icon path {
+    fill: rgb(0, 0, 0) !important;
+}
+#modebar-8f2793 .modebar-btn .icon path {
+    fill: rgb(0, 0, 0) !important;
+}
+
 .js-plotly-plot .plotly [data-title]::after{
   display: none !important;
 }
@@ -248,65 +226,76 @@ a,button{transition: background .3s ease-in-out;outline: none!important;} /* Pre
 .data_check_form {
     overflow: auto;
     width: 100%;
+    box-shadow: var(--shadow_1);
 }
 .data_check_table{
-  font-size: var(--basic_size);
   table-layout: fixed;
   width: 100%;
   height: 100%;
+  border-spacing: 0;
+  border-collapse: inherit;
+  border: solid;
+  border-color: var(--color_1);
+  border-top-width: 0;
+  border-right-width: var(--border_width_1);
+  border-bottom-width: var(--border_width_1);
+  border-left-width: var(--border_width_1);
+  font-size: var(--font_size_1);
 }
 .data_check_table_body{
     width: 100%;
     height: 100%;
 }
 .data_check_table th {
-    border: solid calc(var(--basic_size)*0.1) var(--color_1);
     background: var(--color_2);
     position: sticky;
     top: 0;
     color: var(--color_3);
     text-align: center;
     width: 26vw;
+    border: solid;
+    border-color: var(--color_3);
+    border-width: 0 calc(var(--border_width_1)*0.5);
 }
 .data_check_table td {
   text-align: center;
-  border: solid calc(var(--basic_size)*0.1) var(--color_1);
   background: var(--color_3);
   height: calc(var(--basic_size)*2);
   vertical-align: middle;
+  border: solid;
+  border-color: var(--color_1);
+  border-width: calc(var(--border_width_1)*0.5);
 }
 
 .chk_box_div {
   width: 100%
 }
-/* ラベルのスタイル*/
 .chk_box_div label {
-  font-family: FontAwesome;
   font-size: calc(var(--basic_size)*1.5);
+  font-family: "Font Awesome 5 Free", "Font Awesome 5 Brands";
+  font-weight: 600;
 }
-/* ボックスのスタイル */
 .chk_box_div label:before {
   width: calc(var(--basic_size)*1.1);
   height: calc(var(--basic_size)*1.1);
   display:inline-block;
-  background-color:	#fff;
+  background-color: #ffffff;
   box-shadow: inset var(--shadow_1);
   border-radius:
   calc(var(--basic_size)*0.2);
-  content:'';
   margin: calc(var(--basic_size)*0.5) 0 0 0;
   line-height: calc(var(--basic_size)*1);
+  content: '';
 }
-/* 元のチェックボックスを表示しない */
+
 .chk_box_div input[type=checkbox] {
-	display:
-	none;
+	display:none;
 }
-/* チェックした時のスタイル */
 .chk_box_div input[type=checkbox]:checked + label:before {
-	content: "\f00c";
-	color: rgb(0, 0, 0);
-    box-shadow: inset var(--shadow_2)
+	content: '\f00c';
+	box-shadow: inset var(--shadow_2);
+	color: var(--color_8);
+	font-size: calc(var(--base_scale)*1.3);
 }
 
 .row_div{
@@ -431,8 +420,7 @@ a,button{transition: background .3s ease-in-out;outline: none!important;} /* Pre
 }
 
 .network_name_div {
-    font-weight: bold;
-    color: #000000;
+    /* font-weight: bold; */
     display: flex;
     width: 100%;
     padding-top: calc(var(--basic_size)*0.2);
@@ -479,7 +467,7 @@ a,button{transition: background .3s ease-in-out;outline: none!important;} /* Pre
 #block_type_3{
   display: flex;
   justify-content: center;
-  padding: calc(var(--basic_size)*1) 0;
+  /* padding: calc(var(--basic_size)*1) 0; */
 }
 #block_type_4{
   display: flex
@@ -504,8 +492,8 @@ a,button{transition: background .3s ease-in-out;outline: none!important;} /* Pre
   width: 100%;
 }
 #block_type_8{display: flex;flex-direction: column;padding: 0 2.5%;}
-#block_type_10{display: flex;flex-direction: column;align-items: center;padding: var(--basic_size) 2.5%;}
-#block_type_11{display: flex;align-items: flex-end;justify-content: space-between;width: 100%;}
+#block_type_10{display: grid;padding: var(--basic_size) 2.5%;}
+#block_type_11{display: flex;align-items: flex-end;justify-content: space-between;width: 100%;flex-direction: row;}
 
 
 #button_type_1{
@@ -517,7 +505,6 @@ a,button{transition: background .3s ease-in-out;outline: none!important;} /* Pre
   background: var(--color_2);
   box-shadow: var(--shadow_1);
   color: var(--color_3);
-  font-family: var(--font_1);
 }
 #button_type_1:hover, #button_type_1:active {
   box-shadow: var(--shadow_2);
@@ -539,13 +526,9 @@ a,button{transition: background .3s ease-in-out;outline: none!important;} /* Pre
 }
 
 .name_label{
-  font-family: var(--font_1);2
-  font-size: var(--basic_size);
 }
 
 #form_title{
-  font-family: var(--font_1);
-  font-size: var(--basic_size);
   padding: 0 0 calc(var(--basic_size)*0.2) 0;
   width: 100%;
 }
@@ -561,7 +544,7 @@ padding: calc(var(--basic_size)*0.5) 0;
   align-items: center;
   justify-content:
   center;
-  padding-bottom: calc(var(--basic_size)*1.3);
+  padding-bottom: calc(var(--base_scale)*2);
 }
 .slider input[type="range"] {
   width: 100%;
@@ -582,16 +565,9 @@ padding: calc(var(--basic_size)*0.5) 0;
 }
 
 footer {
-  margin: calc(var(--basic_size)*2) 0;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  align-items: center;
 }
-footer p{font-family: 'Oleo Script';}
 
 #table_tytle{
-  font-family: var(--font_1);
   font-size: var(--basic_size);
   padding: 0 0 calc(var(--basic_size)*0.2) 0;
   width: calc(var(--basic_size)*3);
