--- a/front_end/tutorial_page/css/bootstrap.css
+++ b/front_end/tutorial_page/css/bootstrap.css
@@ -77,9 +77,7 @@ body {
   font-size: var(--bs-body-font-size);
   font-weight: var(--bs-body-font-weight);
   line-height: var(--bs-body-line-height);
-  color: var(--bs-body-color);
   text-align: var(--bs-body-text-align);
-  background-color: var(--bs-body-bg);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
@@ -675,7 +673,7 @@ progress {
   max-width: 100%;
   padding-right: calc(var(--bs-gutter-x) * 0.5);
   padding-left: calc(var(--bs-gutter-x) * 0.5);
-  margin-top: var(--bs-gutter-y);
+  margin-top: var(--base_scale);
 }
 
 .col {
@@ -1384,7 +1382,7 @@ progress {
 
   .col-lg-6 {
     flex: 0 0 auto;
-    width: 50%;
+    width: 80%;
   }
 
   .col-lg-7 {
@@ -1430,7 +1428,7 @@ progress {
   }
 
   .offset-lg-3 {
-    margin-left: 25%;
+    margin-left: 10%;
   }
 
   .offset-lg-4 {
@@ -4523,7 +4521,6 @@ textarea.form-control-lg {
 
 .card-body {
   flex: 1 1 auto;
-  padding: 1rem 1rem;
 }
 
 .card-title {
